disable volume in dockerfile

--- a/Dockerfile-no-stats
+++ b/Dockerfile-no-stats
@@ -36,7 +36,8 @@ RUN /usr/bin/caddy -version
 RUN /usr/bin/caddy -plugins
 
 EXPOSE 80 443 2015
-VOLUME /root/.caddy /srv
+# disable volume by loopbai
+#VOLUME /root/.caddy /srv
 WORKDIR /srv
 
 COPY Caddyfile /etc/Caddyfile
